added to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -37,9 +37,11 @@
 
             <h1>Portfolio</h1>
             <div class="work">
-                <img src="assets/images/1.jpg" class="auth-image"
+                <a href="https://ebayler.github.io/WordGuessGame/">
+                <img src="assets/images/books.jpg" class="auth-image"
                  alt="party">
-                <h3>Test 1</h3>
+                 </a>
+                <h3>Hangman</h3>
             </div>
             <div class="work">
                 <img src="assets/images/2.jpg"
