--- a/portfolio.html
+++ b/portfolio.html
@@ -44,10 +44,12 @@
                 <h3>Hangman</h3>
             </div>
             <div class="work">
-                <img src="assets/images/2.jpg"
+                <a href="https://ebayler.github.io/unit-4-game/">
+                <img src="assets/images/background.jpg"
                      class="auth-image"
-                     alt="bubbles">
-                <h3>Test 2</h3>
+                     alt="nebula">
+                <h3>Crystal Collector</h3>
+                </a>
             </div>
             <div class="work">
                 <img src="assets/images/3.jpg"
