--- a/portfolio.html
+++ b/portfolio.html
@@ -52,10 +52,10 @@
                 </a>
             </div>
             <div class="work">
-                <img src="assets/images/3.jpg"
+                <img src="assets/images/background2.jpg"
                      class="auth-image"
                      alt="sushi">
-                <h3>Test 3</h3>
+                <h3>Trivia Game</h3>
             </div>
             <div class="work">
                 <img src="assets/images/4.jpg"
