--- a/portfolio.html
+++ b/portfolio.html
@@ -58,10 +58,10 @@
                 <h3>Trivia Game</h3>
             </div>
             <div class="work">
-                <img src="assets/images/4.jpg"
+                <img src="assets/images/gif.gif"
                      class="auth-image"
-                     alt="man on bike">
-                <h3>Test 4</h3>
+                     alt="gifs!">
+                <h3>GifTastic!</h3>
             </div>
             <div class="work">
                 <img src="assets/images/5.jpg"
