--- a/portfolio.html
+++ b/portfolio.html
@@ -29,56 +29,61 @@
             </nav>
         </div>
     </header>
-  
+
     <!--Main Container -->
 
-    <div id="main-container" class="container">
+    <div id="main-container"
+         class="container">
         <section class="main-section clearfix">
 
             <h1>Portfolio</h1>
             <div class="work">
                 <a href="https://ebayler.github.io/WordGuessGame/">
-                <img src="assets/images/books.jpg" class="auth-image"
-                 alt="party">
-                 </a>
+                    <img src="assets/images/books.jpg"
+                         class="auth-image"
+                         alt="party">
+                </a>
                 <h3>Hangman</h3>
             </div>
             <div class="work">
                 <a href="https://ebayler.github.io/unit-4-game/">
-                <img src="assets/images/background.jpg"
-                     class="auth-image"
-                     alt="nebula">
-                <h3>Crystal Collector</h3>
+                    <img src="assets/images/background.jpg"
+                         class="auth-image"
+                         alt="nebula">
+                    <h3>Crystal Collector</h3>
                 </a>
             </div>
             <div class="work">
-                <img src="assets/images/background2.jpg"
-                     class="auth-image"
-                     alt="sushi">
-                <h3>Trivia Game</h3>
+                <a href="https://ebayler.github.io/TriviaGame/">
+                    <img src="assets/images/background2.jpg"
+                         class="auth-image"
+                         alt="sushi">
+                    <h3>Trivia Game</h3>
             </div>
             <div class="work">
-                <img src="assets/images/gif.gif"
-                     class="auth-image"
-                     alt="gifs!">
-                <h3>GifTastic!</h3>
+                <a href="https://ebayler.github.io/GifTastic/">
+                    <img src="assets/images/gif.gif"
+                         class="auth-image"
+                         alt="gifs!">
+                    <h3>GifTastic!</h3>
             </div>
             <div class="work">
-                <img src="assets/images/5.jpg"
-                     class="auth-image"
-                     alt="man asking for money">
-                <h3>Test 5</h3>
+                <a href="https://ebayler.github.io/TrainScheduler/">
+                    <img src="assets/images/train.PNG"
+                         class="auth-image"
+                         alt="train Scheduler">
+                    <h3>Train Scheduler</h3>
             </div>
 
         </section>
 
-    <div>
-    <footer>
-        <div class="container">
-            <h4>Copyright &copy;</h4>
+        <div>
+            <footer>
+                <div class="container">
+                    <h4>Copyright &copy;</h4>
+                </div>
+            </footer>
         </div>
-    </footer>
-    </div>
 
 </body>
 
